# 5x5_tictactoe_bot

./: .clang-format  .clang-tidy  CMakeLists.txt  notes.txt  openings.txt  run.py
scripts/: run.sh
src/: CMakeLists.txt  board.cpp  board.hpp  cmdline_args.cpp  cmdline_args.hpp  connection.cpp  connection.hpp  game.cpp  game.hpp  heuristic.cpp  heuristic.hpp  main.cpp  minimax.cpp  minimax.hpp  openings.cpp  openings.hpp  patternmap.cpp  patternmap.hpp
tests/: board_tests.cpp  boardtests.cpp  minimax_tests.cpp
